--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/FM2345-CodeStuff/idk/main/media/idk-idk-idk.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/FM2345-CodeStuff/idk/main/media/depositphotos_2522572-foto-de-stock-gato-bostezando-gritando-o-riendo.jpg">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
-    <meta property="og:video:url" content="https://raw.githubusercontent.com/FM2345-CodeStuff/idk/main/media/when the cold brew hits.mp4">
+    <meta property="og:video:url" content="https://raw.githubusercontent.com/FM2345-CodeStuff/idk/main/media/tomp3.cc - Congregation Jumpscare Template_360p.mp4">
     <!-- If you want a seamless transition between your thumbnail size and video size, adjust these values to match your thumbnail resolution. -->
     <!-- However, it will be all wonky if your thumbnail is vertical and your video is horizontal. This works best with similar aspect ratios -->
     <meta property="og:video:height" content="202">
